--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }
   ],
   "require": {
-    "php": "^7.3",
+    "php": "^7.3|^8.0",
     "ext-curl": "*",
     "ext-json": "*",
     "phpoffice/phpspreadsheet": "*"
